# hph-biome

./: .makim.yaml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  README.md  pyproject.toml  skills-channel.yaml  vulture_whitelist.py
.github/workflows/: docs.yaml  main.yaml  release.yaml
conda/: dev.yaml
skills/hphbiome/: requirements.txt  skill.py  skill.yaml
tests/: test_hphbiome.py  test_hphbiome_hiperhealth.py  test_manifests.py
