[project]
name = "hph-biome-workspace"
version = "0.1.0"  # semantic-release
description = "Workspace configuration for HPH Biome packages"
readme = "README.md"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = { text = "BSD 3 Clause" }
requires-python = ">=3.10,<4"
dependencies = []

[project.optional-dependencies]
dev = [
  "build >=1.3.0",
  "setuptools >=70.1.0,<82",
  "wheel",
  "twine >=6",
  "pytest >=7.3.2",
  "pytest-cov >=4.1.0",
  "coverage >=7.2.7",
  "pre-commit >=3.3.2",
  "ruff >=0.2.0",
  "mypy >=1.5.0,<2",
  "bandit >=1.7.5",
  "vulture >=2.7",
  "PyYAML >=6",
  "makim ==1.27.0",
  "mkdocs >=1.3",
  "mkdocs-exclude >=1.0.2",
  "mkdocs-jupyter >=0.24.7",
  "mkdocs-literate-nav >=0.4.1",
  "mkdocs-macros-plugin >=0.6.3",
  "mkdocs-material >=8",
  "mkdocstrings >=0.21.2",
  "mkdocstrings-python >= 1.1.2",
  "mkdocs-gen-files >=0.5.0",
  "quarto-cli >=1.8.27",
]

[project.urls]
Homepage = "https://github.com/hiperhealth/hph-biome"
Repository = "https://github.com/hiperhealth/hph-biome"
Issues = "https://github.com/hiperhealth/hph-biome/issues"

[build-system]
requires = ["setuptools>=70.1.0,<82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.bandit]
exclude_dirs = ["tests"]
targets = "./"

[tool.mypy]
python_version = "3.10"
allow_subclassing_any = true
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["scripts/"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "packages/hphbiome/src",
    "packages/hphbiome-hiperhealth/src",
]
filterwarnings = [
    "error::RuntimeWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 79
force-exclude = true
src = ["packages", "tests"]
exclude = [
  'docs',
]
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "YTT", # flake8-2020
  "RUF", # Ruff-specific rules
  "I001",  # isort
]
extend-select = [
  "UP006",  # Prefer builtin generics in annotations
  "UP007",  # Prefer | syntax for unions and optionals
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["packages", "vulture_whitelist.py"]
sort_by_size = true
verbose = false
